# nexus-exchange-py

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  endpoints.txt  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: api-version-sync.yml  ci.yml  release.yml
examples/: README.md  _shared.py  account_and_positions.py  bridge_deposit.py  ccxt_market_data.py  fills_and_withdrawals.py  health_check.py  place_and_cancel_order.py  public_market_data.py  signed_request.py  single_ticker.py  wallet_auth.py  ws_streaming.py  ws_trades.py
scripts/: changelog_notes.py  smoke.py  sync_api_version.py
src/nexus_exchange/: __init__.py  _parse.py  auth.py  ccxt_adapter.py  client.py  errors.py  types.py  ws.py
tests/: test_account_orders.py  test_auth.py  test_cancel_on_disconnect.py  test_ccxt.py  test_changelog_notes.py  test_client.py  test_endpoint_surface.py  test_headers.py  test_integration_smoke.py  test_market_data.py  test_retry.py  test_tier3.py  test_trailing_limit.py  test_ws.py
