[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-exchange"
# Keep in sync with the `_resolve_version` fallback literal in
# src/nexus_exchange/client.py (used only when running from an uninstalled
# source tree).
version = "0.3.0"
description = "Official Python SDK for the Nexus Exchange API (experimental)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
keywords = ["nexus", "exchange", "trading", "crypto", "perpetuals"]
authors = [{ name = "Nexus" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["httpx>=0.27", "eth-account>=0.11"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpx>=0.30", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/nexus-xyz/nexus-exchange-py"
Repository = "https://github.com/nexus-xyz/nexus-exchange-py"
"API spec" = "https://github.com/nexus-xyz/nexus-exchange-api"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_exchange"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
